force-app/main/default/objects/cpm__Payment_Service_Provider__c/cpm__Payment_Service_Provider__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Payment Service Provider</label>
</CustomObject>