force-app/main/default/objects/cpm__Payment_Service_Provider__c/fields/cpm__Config_Screen__c.field-meta.xml
<CustomField>
    <fullName>cpm__Config_Screen__c</fullName>
    <label>Config Screen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>