force-app/main/default/objects/cpm__Payment_Service_Provider__c/fields/cpm__IsActive__c.field-meta.xml
<CustomField>
    <fullName>cpm__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>