force-app/main/default/objects/cpm__Payment_Service_Provider__c/fields/cpm__Setup_Class__c.field-meta.xml
<CustomField>
    <fullName>cpm__Setup_Class__c</fullName>
    <label>Setup Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>